src/components/input/Input.scss
@import '../../styles/pallet';
@import '../../styles/potitions';
@import '../../styles/text';

input {     
    width: 91.5%;
    padding: {
        top: 5px;
        bottom: 5px;
        left: 12px;
        right: 12px;
    }
    border-radius: 5px;
    border: 1px solid $border;
    transition: all 0.5s ease;
    line-height: unset;
    display: flex;
    position: sticky;
    box-shadow: none;
    outline: none;
    text-overflow: ellipsis;
    text-shadow: none;
    min-height: 20px;
    margin-bottom: 20px;
    margin-top: 20px;
    position: relative;
}

input::placeholder {
    font-style: italic;
}

input:active, input:focus {
    border-color: $main1;
    
}

.input-container {
    max-width: 225px;
    @extend %auto-margin;
    position: relative;
}

.input-fluid {
    width: 100%;
    position: relative;
}

.visibility {
    cursor: pointer;
    /* width: 100%;
    height: 100%; */
    position: absolute;
    top: 10%;
    left: 89%;
    color: $main2;
    @extend %noselect;
}

